--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,7 @@
               <div class="body-header__column body-header__column_image">
                 <div class="body-header__image _img">
                   <img 
-                    src="./images/header-main-image.jpg" 
+                    src="./images/mainImage.png" 
                     alt="mainImage" 
                     class="body-header__img"
                   >
@@ -260,7 +260,7 @@
             <div class="meet-us__row">
               <div class="meet-us__column meet-us__column_image _img">
                 <img 
-                  src="./images/meet-us.png" 
+                  src="./images/meet-the-team.png" 
                   alt="Meet the POTR team!" 
                   class="meet-us__img"
                 >
@@ -463,7 +463,7 @@
               <div class="pot-size__column pot-size__column_img">
                 <div class="pot-size__image _img">
                   <img 
-                    src="./images/pot-size-3x.png" 
+                    src="./images/size-plant.png" 
                     alt="Pot sizes" 
                     class="pot-size__img"
                   >
